Better UI/UX and Apache ECharts implemented. Google Gemini RAG added for HTML email creation